@@ -1,34 +1,18 @@
 /*
- * JBoss, Home of Professional Open Source.
- * Copyright 2017, Red Hat, Inc., and individual contributors
- * as indicated by the @author tags. See the copyright.txt file in the
- * distribution for a full listing of individual contributors.
- *
- * This is free software; you can redistribute it and/or modify it
- * under the terms of the GNU Lesser General Public License as
- * published by the Free Software Foundation; either version 2.1 of
- * the License, or (at your option) any later version.
- *
- * This software is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this software; if not, write to the Free
- * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
- * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ * Copyright The WildFly Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 package org.wildfly.extension.undertow;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
 import org.jboss.as.controller.AttributeDefinition;
+import org.jboss.as.controller.PathElement;
 import org.jboss.as.controller.PersistentResourceDefinition;
 import org.jboss.as.controller.SimpleAttributeDefinition;
 import org.jboss.as.controller.SimpleAttributeDefinitionBuilder;
+import org.jboss.as.controller.SimpleResourceDefinition;
 import org.jboss.as.controller.access.constraint.SensitivityClassification;
 import org.jboss.as.controller.access.management.AccessConstraintDefinition;
 import org.jboss.as.controller.access.management.SensitiveTargetAccessConstraintDefinition;
@@ -43,6 +27,7 @@ import org.jboss.dmr.ValueExpression;
  * @author Tomaz Cerar (c) 2013 Red Hat Inc.
  */
 class AccessLogDefinition extends PersistentResourceDefinition {
+    static final PathElement PATH_ELEMENT = PathElement.pathElement(Constants.SETTING, Constants.ACCESS_LOG);
     static final RuntimeCapability<Void> ACCESS_LOG_CAPABILITY = RuntimeCapability.Builder.of(Capabilities.CAPABILITY_ACCESS_LOG, true, AccessLogService.class)
               .setDynamicNameMapper(DynamicNameMappers.GRAND_PARENT)
               .build();
@@ -110,7 +95,7 @@ class AccessLogDefinition extends PersistentResourceDefinition {
             .setRestartAllServices()
             .build();
 
-    static final Collection<SimpleAttributeDefinition> ATTRIBUTES = Arrays.asList(
+    static final Collection<AttributeDefinition> ATTRIBUTES = List.of(
             // IMPORTANT -- keep these in xsd order as this order controls marshalling
             WORKER,
             PATTERN,
@@ -123,12 +108,10 @@ class AccessLogDefinition extends PersistentResourceDefinition {
             EXTENDED,
             PREDICATE
     );
-    static final AccessLogDefinition INSTANCE = new AccessLogDefinition();
     private final List<AccessConstraintDefinition> accessConstraints;
 
-
-    private AccessLogDefinition() {
-        super(new Parameters(UndertowExtension.PATH_ACCESS_LOG, UndertowExtension.getResolver(Constants.ACCESS_LOG))
+    AccessLogDefinition() {
+        super(new SimpleResourceDefinition.Parameters(PATH_ELEMENT, UndertowExtension.getResolver(PATH_ELEMENT.getValue()))
                 .setAddHandler(AccessLogAdd.INSTANCE)
                 .setRemoveHandler(AccessLogRemove.INSTANCE)
                 .setCapabilities(ACCESS_LOG_CAPABILITY)
